<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="#F5F5F5">

    <!-- Logo aplicación -->
    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="306dp"
        android:layout_height="320dp"
        android:contentDescription="@string/logo_aplicacion"
        android:src="@drawable/logo" />

    <!-- Campo de texto para el usuario -->
    <EditText
        android:id="@+id/username_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:autofillHints="username"
        android:background="@android:drawable/edit_text"
        android:drawablePadding="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="12dp" />

    <!-- Campo de texto para la contraseña -->

    <!-- Botón de inicio de sesión -->
    <EditText
        android:id="@+id/password_input"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:background="@android:drawable/edit_text"
        android:drawablePadding="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="12dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textStyle="bold"
        android:padding="12dp"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF"/>
    <TextView
        android:id="@+id/register_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAccount"
        android:textSize="15sp"
        android:padding="20dp"
        android:textStyle="bold"
        android:textColor="#6200EE"
        android:clickable="true"
        android:focusable="true" />
</LinearLayout>